Remove deprecated MaxPermSize